--- a/index.html
+++ b/index.html
@@ -4,9 +4,125 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/index.css" />
+    <title>javascript30</title>
   </head>
   <body>
-    <div>Hello Javascript30</div>
+    <h1 class="main__title">Javascript 30</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+          <a href="./html/01.html">
+            <div class="card-section">
+              <div class="card-section__img"></div>
+              <div class="card-section__title">01. JavaScript Drum Kit</div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+          <a href="./html/02.html">
+            <div class="card-section">
+              <div class="card-section__img"></div>
+              <div class="card-section__title">02. CSS + JS Clock</div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+          <a href="./html/03.html">
+            <div class="card-section">
+              <div class="card-section__img"></div>
+              <div class="card-section__title">
+                03. Playing with CSS Variables and JS
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+          <a href="./html/04.html">
+            <div class="card-section">
+              <div class="card-section__img"></div>
+              <div class="card-section__title">04. Array Cardio Day 1</div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+          <a href="./html/05.html">
+            <div class="card-section">
+              <div class="card-section__img"></div>
+              <div class="card-section__title">
+                05. Flex Panels Image Gallery
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+          <a href="./html/06.html">
+            <div class="card-section">
+              <div class="card-section__img"></div>
+              <div class="card-section__title">06. Ajax Type Ahead</div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+          <a href="./html/07.html">
+            <div class="card-section">
+              <div class="card-section__img"></div>
+              <div class="card-section__title">07. Array Cardio Day 2</div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+          <a href="./html/08.html">
+            <div class="card-section">
+              <div class="card-section__img"></div>
+              <div class="card-section__title">08. Fun with HTML5 Canvas</div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+          <a href="./html/09.html">
+            <div class="card-section">
+              <div class="card-section__img"></div>
+              <div class="card-section__title">
+                09. 14 Must Know Dev Tools Tricks
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+          <a href="./html/10.html">
+            <div class="card-section">
+              <div class="card-section__img"></div>
+              <div class="card-section__title">
+                10. Hold Shift to Check Multiple Checkboxes
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <!-- jQuery script -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
