--- a/html/01.html
+++ b/html/01.html
@@ -5,12 +5,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="../css/01.css" />
-    <title>01 - javascript30</title>
+    <link
+      rel="icon"
+      href="https://s3.ap-northeast-2.amazonaws.com/bongbong/javascript30/images/favicon-JS30.png"
+      type="image/png"
+    />
+    <title>01. JS Drum Kit</title>
   </head>
   <body>
-    <p>Hello world</p>
+    <div class="keys__container">
+      <div class="keys">
+        <div data-key="65" class="key">
+          <kbd>A</kbd>
+          <span class="sound">clap</span>
+        </div>
+        <div data-key="83" class="key">
+          <kbd>S</kbd>
+          <span class="sound">hihat</span>
+        </div>
+        <div data-key="68" class="key">
+          <kbd>D</kbd>
+          <span class="sound">kick</span>
+        </div>
+        <div data-key="70" class="key">
+          <kbd>F</kbd>
+          <span class="sound">openhat</span>
+        </div>
+        <div data-key="71" class="key">
+          <kbd>G</kbd>
+          <span class="sound">boom</span>
+        </div>
+        <div data-key="72" class="key">
+          <kbd>H</kbd>
+          <span class="sound">ride</span>
+        </div>
+        <div data-key="74" class="key">
+          <kbd>J</kbd>
+          <span class="sound">snare</span>
+        </div>
+        <div data-key="75" class="key">
+          <kbd>K</kbd>
+          <span class="sound">tom</span>
+        </div>
+        <div data-key="76" class="key">
+          <kbd>L</kbd>
+          <span class="sound">tink</span>
+        </div>
+      </div>
+    </div>
+
+    <audio data-key="65" src="../sounds/clap.wav"></audio>
+    <audio data-key="83" src="../sounds/hihat.wav"></audio>
+    <audio data-key="68" src="../sounds/kick.wav"></audio>
+    <audio data-key="70" src="../sounds/openhat.wav"></audio>
+    <audio data-key="71" src="../sounds/boom.wav"></audio>
+    <audio data-key="72" src="../sounds/ride.wav"></audio>
+    <audio data-key="74" src="../sounds/snare.wav"></audio>
+    <audio data-key="75" src="../sounds/tom.wav"></audio>
+    <audio data-key="76" src="../sounds/tink.wav"></audio>
+
     <script>
-      // JavaScript here.
+      function removeTransition(e) {
+        if (e.propertyName !== "transform") return;
+        e.target.classList.remove("playing");
+      }
+
+      function playsound(e) {
+        const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+        const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
+        if (!audio) return;
+        key.classList.add("playing");
+        audio.play();
+        audio.currentTime = 0;
+      }
+
+      const keys = Array.from(document.querySelectorAll(".key"));
+      keys.forEach(key =>
+        key.addEventListener("transitionend", removeTransition)
+      );
+
+      window.addEventListener("keydown", playsound);
     </script>
   </body>
 </html>
