--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/index.css" />
+    <link
+      rel="icon"
+      href="https://s3.ap-northeast-2.amazonaws.com/bongbong/javascript30/images/favicon-JS30.png"
+      type="image/png"
+    />
     <title>javascript30</title>
   </head>
   <body>
