--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
     <title>javascript30</title>
   </head>
   <body>
-    <h1 class="main__title">Javascript 30</h1>
+    <div class="container">
+      <div class="nav-bar">
+        <div></div>
+        <div class="main__title">Javascript 30</div>
+        <div class="author__title">by bongbong</div>
+      </div>
+    </div>
     <div class="container">
       <div class="row">
         <div class="col-6 col-md-4 col-lg-3 exercise__row">
