--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
@@ -16,17 +22,30 @@
       href="https://s3.ap-northeast-2.amazonaws.com/bongbong/javascript30/images/favicon-JS30.png"
       type="image/png"
     />
-    <title>javascript30</title>
+    <title>JAVASCRIPT 30</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <div class="nav-bar">
-        <div></div>
-        <div class="main__title">Javascript 30</div>
-        <div class="author__title">by bongbong</div>
+        <div class="main__title">
+          <div class="main__title-item">
+            30 DAYS
+            <i class="fas fa-times" style="color:#ffc600;"></i> JAVASCRIPT 30
+          </div>
+        </div>
+        <div class="sub__title">
+          <div class="github__link">
+            <a
+              href="https://github.com/seonghojung/javascript30"
+              target="_blank"
+              >GITHUB CODE SHARING ></a
+            >
+          </div>
+          <div class="author__title">by bongbong</div>
+        </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-6 col-md-4 col-lg-3 exercise__row">
           <a href="./html/01.html">
