--- a/html/04.html
+++ b/html/04.html
@@ -82,23 +82,51 @@
 
       // Array.prototype.filter()
       // 1. Filter the list of inventors for those who were born in the 1500's
+      const fifteen = inventors.filter(
+        inventor => inventor.year >= 1500 && inventor.year < 1600
+      );
+      console.table(fifteen);
 
       // Array.prototype.map()
       // 2. Give us an array of the inventors' first and last names
+      const fullNames = inventors.map(
+        inventor => `${inventor.first} ${inventor.last}`
+      );
+      console.table(fullNames);
 
       // Array.prototype.sort()
       // 3. Sort the inventors by birthdate, oldest to youngest
+      const ordered = inventors.sort((a, b) =>
+        a.year > b.year ? 1 : a.year < b.year ? -1 : 0
+      );
+      console.table(ordered);
 
       // Array.prototype.reduce()
       // 4. How many years did all the inventors live?
+      const totalYears = inventors.reduce((total, inventor) => {
+        return total + (inventor.passed - inventor.year);
+      }, 0);
+      console.log(totalYears);
 
       // 5. Sort the inventors by years lived
+      const oldest = inventors.sort((a, b) => {
+        const aInventor = a.passed - a.year;
+        const bInventor = b.passed - b.year;
+        return aInventor > bInventor ? -1 : aInventor < bInventor ? 1 : 0;
+      });
+      console.table(oldest);
 
       // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
       // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
       // 7. sort Exercise
       // Sort the people alphabetically by last name
+      const alpha = people.sort((aPerson, bPerson) => {
+        const [aFirst, aLast] = aPerson.split(", ");
+        const [bFirst, bLast] = bPerson.split(", ");
+        return aLast > bLast ? 1 : aLast < bLast ? -1 : 0;
+      });
+      console.table(alpha);
 
       // 8. Reduce Exercise
       // Sum up the instances of each of these
@@ -118,6 +146,15 @@
         "car",
         "truck"
       ];
+      const transportation = data.reduce((obj, item) => {
+        if (item in obj) {
+          obj[item]++;
+        } else {
+          obj[item] = 1;
+        }
+        return obj;
+      }, {});
+      console.log(transportation);
     </script>
   </body>
 </html>
