--- a/html/06.html
+++ b/html/06.html
@@ -10,14 +10,27 @@
       href="https://s3.ap-northeast-2.amazonaws.com/bongbong/javascript30/images/favicon-JS30.png"
       type="image/png"
     />
-    <title>06. Ajax Type Ahead</title>
+    <title>06. Ajax Type Ahead 👀</title>
   </head>
 
   <body>
-    06. Ajax Type Ahead
+    <form class="search-form">
+      <input type="text" class="search" placeholder="City or State" />
+      <ul class="suggestions">
+        <li>Filter for a city</li>
+        <li>or a state</li>
+      </ul>
+    </form>
 
     <script>
-      // JS here..
+      const endpoint =
+        "https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json";
+
+      const cities = [];
+      fetch(endpoint)
+        .then(blob => blob.json())
+        .then(data => cities.push(...data))
+        .then(console.log(cities));
     </script>
   </body>
 </html>
