--- a/html/06.html
+++ b/html/06.html
@@ -28,9 +28,49 @@
 
       const cities = [];
       fetch(endpoint)
-        .then(blob => blob.json())
-        .then(data => cities.push(...data))
-        .then(console.log(cities));
+        .then(tomato => tomato.json())
+        .then(data => cities.push(...data));
+
+      const findMatches = wordToMatch => {
+        return cities.filter(place => {
+          const regex = new RegExp(wordToMatch, "gi");
+          return place.city.match(regex) || place.state.match(regex);
+        });
+      };
+
+      const formatNumber = num => {
+        return num.toString().replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1,");
+      };
+
+      const displayMatches = () => {
+        matchArray = findMatches(searchInput.value);
+        const html = matchArray
+          .map(place => {
+            const regex = new RegExp(searchInput.value, "gi");
+            const cityName = place.city.replace(
+              regex,
+              `<span class="hl">${searchInput.value}</span>`
+            );
+            const stateName = place.state.replace(
+              regex,
+              `<span class="hl">${searchInput.value}</span>`
+            );
+            return `
+          <li>
+            <span class="name">${cityName}, ${stateName}</span>
+            <span class="population">${formatNumber(place.population)}</span>
+          </li>
+          `;
+          })
+          .join("");
+        suggestions.innerHTML = html;
+      };
+
+      const searchInput = document.querySelector(".search");
+      const suggestions = document.querySelector(".suggestions");
+
+      searchInput.addEventListener("change", displayMatches);
+      searchInput.addEventListener("keyup", displayMatches);
     </script>
   </body>
 </html>
