--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               >GITHUB CODE SHARING ></a
             >
           </div>
-          <div class="author__title">by bongbong</div>
+          <div class="author__title">by Seongho Jung</div>
         </div>
       </div>
     </div>
