--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
+      href="https://fonts.googleapis.com/css?family=Titillium+Web"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
@@ -131,6 +135,106 @@
               <div class="card-section__img"></div>
               <div class="card-section__title">
                 10. Hold Shift to Check Multiple Checkboxes
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+          <a href="./html/11.html">
+            <div class="card-section">
+              <div class="card-section__img"></div>
+              <div class="card-section__title">
+                11. Custom HTML5 Video Player
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+          <a href="./html/12.html">
+            <div class="card-section">
+              <div class="card-section__img"></div>
+              <div class="card-section__title">
+                12. Key Sequence Detection (KONAMI CODE)
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+          <a href="./html/13.html">
+            <div class="card-section">
+              <div class="card-section__img"></div>
+              <div class="card-section__title">
+                13. Slide In on Scroll
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+          <a href="./html/14.html">
+            <div class="card-section">
+              <div class="card-section__img"></div>
+              <div class="card-section__title">
+                14. Object and Arrays - Reference VS Copy
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+          <a href="./html/15.html">
+            <div class="card-section">
+              <div class="card-section__img"></div>
+              <div class="card-section__title">
+                15. LocalStorage and Event Delegation
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+          <a href="./html/16.html">
+            <div class="card-section">
+              <div class="card-section__img"></div>
+              <div class="card-section__title">
+                16. CSS Text Shadow Mouse Move Effect
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+          <a href="./html/17.html">
+            <div class="card-section">
+              <div class="card-section__img"></div>
+              <div class="card-section__title">
+                17. Sorting Band Names without articles
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+          <a href="./html/18.html">
+            <div class="card-section">
+              <div class="card-section__img"></div>
+              <div class="card-section__title">
+                18. Tally String Times with Reduce
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+          <a href="./html/19.html">
+            <div class="card-section">
+              <div class="card-section__img"></div>
+              <div class="card-section__title">
+                19. Unreal Webcam Fun
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+          <a href="./html/20.html">
+            <div class="card-section">
+              <div class="card-section__img"></div>
+              <div class="card-section__title">
+                20. Native Speech Recognition
               </div>
             </div>
           </a>
