--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+        <div class="col-6 col-sm-4 col-md-4 col-lg-3 exercise__row">
           <a href="./html/01.html">
             <div class="card-section">
               <div class="card-section__img"></div>
@@ -59,7 +59,7 @@
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+        <div class="col-6 col-sm-4 col-md-4 col-lg-3 exercise__row">
           <a href="./html/02.html">
             <div class="card-section">
               <div class="card-section__img"></div>
@@ -67,7 +67,7 @@
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+        <div class="col-6 col-sm-4 col-md-4 col-lg-3 exercise__row">
           <a href="./html/03.html">
             <div class="card-section">
               <div class="card-section__img"></div>
@@ -77,7 +77,7 @@
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+        <div class="col-6 col-sm-4 col-md-4 col-lg-3 exercise__row">
           <a href="./html/04.html">
             <div class="card-section">
               <div class="card-section__img"></div>
@@ -85,7 +85,7 @@
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+        <div class="col-6 col-sm-4 col-md-4 col-lg-3 exercise__row">
           <a href="./html/05.html">
             <div class="card-section">
               <div class="card-section__img"></div>
@@ -95,7 +95,7 @@
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+        <div class="col-6 col-sm-4 col-md-4 col-lg-3 exercise__row">
           <a href="./html/06.html">
             <div class="card-section">
               <div class="card-section__img"></div>
@@ -103,7 +103,7 @@
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+        <div class="col-6 col-sm-4 col-md-4 col-lg-3 exercise__row">
           <a href="./html/07.html">
             <div class="card-section">
               <div class="card-section__img"></div>
@@ -111,7 +111,7 @@
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+        <div class="col-6 col-sm-4 col-md-4 col-lg-3 exercise__row">
           <a href="./html/08.html">
             <div class="card-section">
               <div class="card-section__img"></div>
@@ -119,7 +119,7 @@
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+        <div class="col-6 col-sm-4 col-md-4 col-lg-3 exercise__row">
           <a href="./html/09.html">
             <div class="card-section">
               <div class="card-section__img"></div>
@@ -129,7 +129,7 @@
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+        <div class="col-6 col-sm-4 col-md-4 col-lg-3 exercise__row">
           <a href="./html/10.html">
             <div class="card-section">
               <div class="card-section__img"></div>
@@ -139,7 +139,7 @@
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+        <div class="col-6 col-sm-4 col-md-4 col-lg-3 exercise__row">
           <a href="./html/11.html">
             <div class="card-section">
               <div class="card-section__img"></div>
@@ -149,7 +149,7 @@
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+        <div class="col-6 col-sm-4 col-md-4 col-lg-3 exercise__row">
           <a href="./html/12.html">
             <div class="card-section">
               <div class="card-section__img"></div>
@@ -159,7 +159,7 @@
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+        <div class="col-6 col-sm-4 col-md-4 col-lg-3 exercise__row">
           <a href="./html/13.html">
             <div class="card-section">
               <div class="card-section__img"></div>
@@ -169,7 +169,7 @@
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+        <div class="col-6 col-sm-4 col-md-4 col-lg-3 exercise__row">
           <a href="./html/14.html">
             <div class="card-section">
               <div class="card-section__img"></div>
@@ -179,7 +179,7 @@
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+        <div class="col-6 col-sm-4 col-md-4 col-lg-3 exercise__row">
           <a href="./html/15.html">
             <div class="card-section">
               <div class="card-section__img"></div>
@@ -189,7 +189,7 @@
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+        <div class="col-6 col-sm-4 col-md-4 col-lg-3 exercise__row">
           <a href="./html/16.html">
             <div class="card-section">
               <div class="card-section__img"></div>
@@ -199,7 +199,7 @@
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+        <div class="col-6 col-sm-4 col-md-4 col-lg-3 exercise__row">
           <a href="./html/17.html">
             <div class="card-section">
               <div class="card-section__img"></div>
@@ -209,7 +209,7 @@
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+        <div class="col-6 col-sm-4 col-md-4 col-lg-3 exercise__row">
           <a href="./html/18.html">
             <div class="card-section">
               <div class="card-section__img"></div>
@@ -219,7 +219,7 @@
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+        <div class="col-6 col-sm-4 col-md-4 col-lg-3 exercise__row">
           <a href="./html/19.html">
             <div class="card-section">
               <div class="card-section__img"></div>
@@ -229,7 +229,7 @@
             </div>
           </a>
         </div>
-        <div class="col-6 col-md-4 col-lg-3 exercise__row">
+        <div class="col-6 col-sm-4 col-md-4 col-lg-3 exercise__row">
           <a href="./html/20.html">
             <div class="card-section">
               <div class="card-section__img"></div>
