--- a/html/06.html
+++ b/html/06.html
@@ -4,16 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Titillium+Web"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet" />
     <link rel="stylesheet" href="../css/06.css" />
-    <link
-      rel="icon"
-      href="https://s3.ap-northeast-2.amazonaws.com/bongbong/javascript30/images/favicon-JS30.png"
-      type="image/png"
-    />
+    <link rel="icon" href="https://s3.ap-northeast-2.amazonaws.com/bongbong/javascript30/images/favicon-JS30.png" type="image/png" />
     <title>06. Ajax Type Ahead 👀</title>
   </head>
 
@@ -27,8 +20,7 @@
     </form>
 
     <script>
-      const endpoint =
-        "https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json";
+      const endpoint = "https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json";
 
       const cities = [];
       fetch(endpoint)
@@ -51,14 +43,8 @@
         const html = matchArray
           .map(place => {
             const regex = new RegExp(searchInput.value, "gi");
-            const cityName = place.city.replace(
-              regex,
-              `<span class="hl">${searchInput.value}</span>`
-            );
-            const stateName = place.state.replace(
-              regex,
-              `<span class="hl">${searchInput.value}</span>`
-            );
+            const cityName = place.city.replace(regex, `<span class="hl">${searchInput.value}</span>`);
+            const stateName = place.state.replace(regex, `<span class="hl">${searchInput.value}</span>`);
             return `
           <li>
             <span class="name">${cityName}, ${stateName}</span>
