--- a/html/01.html
+++ b/html/01.html
@@ -4,16 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Titillium+Web"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet" />
     <link rel="stylesheet" href="../css/01.css" />
-    <link
-      rel="icon"
-      href="https://s3.ap-northeast-2.amazonaws.com/bongbong/javascript30/images/favicon-JS30.png"
-      type="image/png"
-    />
+    <link rel="icon" href="https://s3.ap-northeast-2.amazonaws.com/bongbong/javascript30/images/favicon-JS30.png" type="image/png" />
     <title>01. JS Drum Kit</title>
   </head>
   <body>
@@ -69,26 +62,24 @@
     <audio data-key="76" src="../sounds/tink.wav"></audio>
 
     <script>
+      function playSound(e) {
+        const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+        const key = document.querySelector(`div.key[data-key="${e.keyCode}"]`);
+        if (!audio) return;
+        audio.play();
+        audio.currentTime = 0;
+        key.classList.add("playing");
+      }
+
       function removeTransition(e) {
         if (e.propertyName !== "transform") return;
         e.target.classList.remove("playing");
       }
 
-      function playsound(e) {
-        const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-        const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
-        if (!audio) return;
-        key.classList.add("playing");
-        audio.play();
-        audio.currentTime = 0;
-      }
+      const keysArr = Array.from(document.querySelectorAll(".key"));
+      keysArr.forEach((key) => key.addEventListener("transitionend", removeTransition));
 
-      const keys = Array.from(document.querySelectorAll(".key"));
-      keys.forEach(key =>
-        key.addEventListener("transitionend", removeTransition)
-      );
-
-      window.addEventListener("keydown", playsound);
+      window.addEventListener("keydown", playSound);
     </script>
   </body>
 </html>
